***************************************************************

TestLink development team:

	Andreas  Morsing  (scs)
	Martin  Havlat  (mht)
	Asiel    (azl)
	Francisco  Mancardi  (fm)
	Chad  Rosen  (chad)
	Kevin  Levy  (kl)



===============================================================
2005/07/XX	Version: 1.6.Beta
===============================================================

Bugfixes:

* [Mantis 4] Keywords of imported TC are not added to the product
* [Mantis 5] Saving personal data, partially invalidates session
* [Mantis 15] Using HTML TAG in the product name breaks the page
* [Mantis 51] [SF 1209922] bug when duplicating mgttestcase to testcase
* [Mantis 42] [SF 1208538] Use of apostrophes in titles of categories etc
* [SF 900437] table results -- incoherent data ?
* [SF 887818] Imported Keywords aren't added to KW
      table
* Tiki: CSV import (date in text)
* [SF 1200582] Cannot see test cases in Test Case Execution page

Enhancements:

* optimized executeNavigator.php
* refactorized priority reports
* product delete causes also delete of related data
* activate/deactivate product added
* [SF 953388] requirement coverage
* [SF 1181609] available copy TC to the same category
* added I18N,L10N support at user interface level. (partially implemented)
* added global array to manage test case status (partially implemented)
* added automatic base href generation
* Created an initially general bugtracking
      interface
* Added mantis 0.19.1 support (works also for 1.0.0.a3)

Changes:

* test Plans are ordered according the name
* updated menuBar (added the most important links, clean code and smarty template)
* changes in $g_tc_status
* refactoring regarding use of $g_tc_status, instead of MAGIC LETTERS (p,f,n,b)
* the instruction pages has been moved to gui\help\<LOCALE>\
* the HTML pages has been moved to gui\help\<LOCALE>\
* changes in config.inc.php
* Cleaned up config.inc.php (removed TL_TABLE_PREFIX,
      removed $delim)